# Agentic-RAG-for-Real-time-Financial-Intelligence

./: .env  .env.example  .gitignore  app.py  pyproject.toml  read_data.py  readme.md  requirements.txt  state.py  test_finn_api.py
abandoned/finnhub_mcp_legacy/: finnhub_git.py  finnhub_mcp.py  finnhub_native.py  finnhub_pipedream.py  test_pipedream.py
chains/: grader_chain.py  hallucination.py  router_chain.py
documents/: finn_api.txt
financial database construction/: .gitignore  README.md  docker-compose.milvus.yml  plan.md  rag refine skill.md  requirements.txt
financial database construction/config/: eval_queries.jsonl  eval_queries_1000.jsonl  eval_queries_1000_multi.jsonl  sample_companies.csv
nodes/: generate.py  grade_docs.py  retrieve.py  router.py  web_search.py
nodes/analysis/: entity_resolver.py  local_semantic_analyzer.py  query_analyzer.py  query_analyzer_validator.py
nodes/evidence/: context_composer.py  evidence_ledger.py  evidence_utils.py
nodes/generation/: answer_generator.py
nodes/legacy/: context_builder.py  generate.py  grade_docs.py  router.py  selector.py
nodes/planning/: reasoning_router.py  task_planner.py
nodes/retrieval/: retrieval_orchestrator.py  retrieve.py  source_api.py  web_search.py
nodes/validation/: contract_verifier.py
observability/: run_store.py  trace.py
rag_retrieval/: document_recall.py  multistage.py
scripts/: download_qwen_local.py
skills_for_design_project/: financial_query_understanding_skill.md  rag_pipeline_construction_skill.md  skill_authoring_guide.md
tools/: registry.py
(+27 files in other folders)
